Remove `overflow` on sticky parent preventing stick

--- a/src/scss/cs/overview.scss
+++ b/src/scss/cs/overview.scss
@@ -1,7 +1,5 @@
 #overview {
-  z-index: 1;
   position: relative;
-  overflow: hidden;
 }
 
 #overview:before {
